--- a/src/pages/subpages/StoryDisplay.scss
+++ b/src/pages/subpages/StoryDisplay.scss
@@ -1,6 +1,17 @@
-.StoryDisplay{
-  & .title {
+.StoryDisplay {
+  padding: 10px;
+  margin: 10px;
+  border: 2px solid black;
+  border-radius: 6px;
+
+  .text-data {
+    padding: 4px;
     font-size: larger;
-    font-weight: bold;
+
+    .label {
+      font-weight: bold;
+      font-size: x-large;
+      margin-right: 10px;
+    }
   }
 }
