update title and css

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,15 +15,15 @@
 
 .left-nav {
   flex: 1;
+  padding: 4px;
 }
 
 .page-view {
   flex: 5;
-  background-color: lightsteelblue;
 }
 }
 
 .App-header {
   font-size: calc(10px + 2vmin);
-  margin: 12px 8px 4px 0px;
+  margin: 12px 8px 4px 0;
 }
