--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,11 @@
 
 .App {
   text-align: center;
-  height: 12vh;
+  //height: 12vh;
   justify-content: center;
 
   &.HardLine {
-    border-bottom: black 2px solid;
+    border-bottom: #1565C0 3px solid;
   }
 }
 
