--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -1,22 +1,23 @@
 .navigation {
   display: flex;
-  flex-flow: row wrap;
+  //flex-flow: row wrap;
+  flex-direction: row;
   justify-content: center;
-
   list-style: none;
-  margin: 10px;
+  margin-top: 10px;
   background: deepskyblue;
-}
 
-.navigation a {
-  text-decoration: none;
-  display: block;
-  padding: 1em;
-  color: white;
-}
+  a {
+    text-decoration: none;
+    display: block;
+    padding: 1em;
+    color: white;
 
-.navigation a:hover {
-  background: #1565C0;
+  }
+
+  a:hover {
+    background: #1565C0;
+  }
 }
 
 @media all and (max-width: 800px) {
@@ -29,14 +30,16 @@
   .navigation {
     flex-flow: column wrap;
     padding: 0;
-  }
-  .navigation a {
-    text-align: center;
-    padding: 10px;
-    border-top: 1px solid rgba(255, 255, 255, 0.3);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  }
-  .navigation li:last-of-type a {
-    border-bottom: none;
+
+    a {
+      text-align: center;
+      padding: 10px;
+      border-top: 1px solid rgba(255, 255, 255, 0.3);
+      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    }
+
+    li:last-of-type a {
+      border-bottom: none;
+    }
   }
 }
